nav: fix more dropdown hiding behind other elements in Edge

--- a/src/components/MainNav/index.css
+++ b/src/components/MainNav/index.css
@@ -32,6 +32,7 @@ nav ul li a {
     border-radius: 3px;
     background-color: #f5f5f5;
     box-shadow: 0 9px 30px 0 rgba(35,39,42,.1);
+    z-index: 10;
   }
 
   nav ul.InnerNav li {
